--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"preferGlobal": true,
 	"name":         "url-decode-encode-cli",
 	"description":  "Command line utility for URL decoding & encoding.",
-	"version":      "0.1.1",
+	"version":      "1.0.1",
 	"files":        ["decode.js", "encode.js"],
 	"bin": {
 		"url-encode": "./encode.js",
@@ -15,6 +15,9 @@
 	"bugs":         "https://github.com/derhuerst/url-decode-encode-cli/issues",
 	"license":      "ISC",
 	"engines":      {"node": ">=4"},
+	"dependencies": {
+		"mri": "^1.1.6"
+	},
 	"scripts": {
 		"test":       "./test.sh",
 		"prepublish": "npm test"
